--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -107,3 +107,21 @@ body {
   transform: translateX(-100%);
   transition: transform 300ms ease-in-out;
 }
+.input-wrapper {
+  position: relative;
+  display: inline-block;
+}
+
+.input-prefix {
+  position: absolute;
+  left: 10px;
+  top: 55%;
+  transform: translateY(-50%);
+  font-size: 16px;
+  color: #fff;
+  pointer-events: none;
+}
+
+.input-field {
+  padding-left: 30px; /* Adjust to ensure the text doesn't overlap the @ sign */
+}
